// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`verdict > renders full verdict panel 1`] = `
"[38;2;0;212;255m╭─ [0m[38;2;0;212;255mVERDICT[0m[38;2;0;212;255m ────────────────────────────────────────────────╮[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;255;255m[1mNVIDIA remains the dominant AI infrastructure play with[0m[0m  [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;255;255m[1munmatched GPU supply chain leverage and software moat[0m[0m    [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;255;255m[1mvia CUDA.[0m[0m                                                [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m├─ [0m[38;2;0;212;255mSIGNAL[0m[38;2;0;212;255m ─────────────────────────────────────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mRecommendation: [0m[38;2;0;255;136mBUY[0m                                      [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m├─ [0m[38;2;0;212;255mKEY LEVELS[0m[38;2;0;212;255m ─────────────────────────────────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mSupport:    [0m[38;2;255;221;0m$145.00[0m                                      [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mResistance: [0m[38;2;255;221;0m$200.00[0m                                      [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m├─ [0m[38;2;0;212;255mRISK FACTORS[0m[38;2;0;212;255m ───────────────────────────────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;255;170;0m⚠ [0m[38;2;255;255;255mExport controls limiting China revenue[0m                 [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;170;0m⚠ [0m[38;2;255;255;255mAMD gaining datacenter GPU market share[0m                [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;170;0m⚠ [0m[38;2;255;255;255mValuation premium at 35x forward earnings[0m              [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m╰──────────────────────────────────────────────────────────╯[0m"
`;

exports[`verdict > renders in bloomberg theme 1`] = `
"[38;2;255;140;0m╭─ [0m[38;2;255;140;0mVERDICT[0m[38;2;255;140;0m ────────────────────────────────────────────────╮[0m
[38;2;255;140;0m│[0m                                                          [38;2;255;140;0m│[0m
[38;2;255;140;0m│[0m [38;2;255;255;255m[1mNVIDIA remains the dominant AI infrastructure play with[0m[0m  [38;2;255;140;0m│[0m
[38;2;255;140;0m│[0m [38;2;255;255;255m[1munmatched GPU supply chain leverage and software moat[0m[0m    [38;2;255;140;0m│[0m
[38;2;255;140;0m│[0m [38;2;255;255;255m[1mvia CUDA.[0m[0m                                                [38;2;255;140;0m│[0m
[38;2;255;140;0m│[0m                                                          [38;2;255;140;0m│[0m
[38;2;255;140;0m├─ [0m[38;2;255;140;0mSIGNAL[0m[38;2;255;140;0m ─────────────────────────────────────────────────┤[0m
[38;2;255;140;0m│[0m [38;2;255;140;0mRecommendation: [0m[38;2;0;200;83mBUY[0m                                      [38;2;255;140;0m│[0m
[38;2;255;140;0m│[0m                                                          [38;2;255;140;0m│[0m
[38;2;255;140;0m├─ [0m[38;2;255;140;0mKEY LEVELS[0m[38;2;255;140;0m ─────────────────────────────────────────────┤[0m
[38;2;255;140;0m│[0m [38;2;255;140;0mSupport:    [0m[38;2;255;140;0m$145.00[0m                                      [38;2;255;140;0m│[0m
[38;2;255;140;0m│[0m [38;2;255;140;0mResistance: [0m[38;2;255;140;0m$200.00[0m                                      [38;2;255;140;0m│[0m
[38;2;255;140;0m│[0m                                                          [38;2;255;140;0m│[0m
[38;2;255;140;0m├─ [0m[38;2;255;140;0mRISK FACTORS[0m[38;2;255;140;0m ───────────────────────────────────────────┤[0m
[38;2;255;140;0m│[0m [38;2;255;214;0m⚠ [0m[38;2;255;255;255mExport controls limiting China revenue[0m                 [38;2;255;140;0m│[0m
[38;2;255;140;0m│[0m [38;2;255;214;0m⚠ [0m[38;2;255;255;255mAMD gaining datacenter GPU market share[0m                [38;2;255;140;0m│[0m
[38;2;255;140;0m│[0m [38;2;255;214;0m⚠ [0m[38;2;255;255;255mValuation premium at 35x forward earnings[0m              [38;2;255;140;0m│[0m
[38;2;255;140;0m│[0m                                                          [38;2;255;140;0m│[0m
[38;2;255;140;0m╰──────────────────────────────────────────────────────────╯[0m"
`;

exports[`verdict > renders in dracula theme 1`] = `
"[38;2;189;147;249m╭─ [0m[38;2;189;147;249mVERDICT[0m[38;2;189;147;249m ────────────────────────────────────────────────╮[0m
[38;2;189;147;249m│[0m                                                          [38;2;189;147;249m│[0m
[38;2;189;147;249m│[0m [38;2;248;248;242m[1mNVIDIA remains the dominant AI infrastructure play with[0m[0m  [38;2;189;147;249m│[0m
[38;2;189;147;249m│[0m [38;2;248;248;242m[1munmatched GPU supply chain leverage and software moat[0m[0m    [38;2;189;147;249m│[0m
[38;2;189;147;249m│[0m [38;2;248;248;242m[1mvia CUDA.[0m[0m                                                [38;2;189;147;249m│[0m
[38;2;189;147;249m│[0m                                                          [38;2;189;147;249m│[0m
[38;2;189;147;249m├─ [0m[38;2;189;147;249mSIGNAL[0m[38;2;189;147;249m ─────────────────────────────────────────────────┤[0m
[38;2;189;147;249m│[0m [38;2;189;147;249mRecommendation: [0m[38;2;80;250;123mBUY[0m                                      [38;2;189;147;249m│[0m
[38;2;189;147;249m│[0m                                                          [38;2;189;147;249m│[0m
[38;2;189;147;249m├─ [0m[38;2;189;147;249mKEY LEVELS[0m[38;2;189;147;249m ─────────────────────────────────────────────┤[0m
[38;2;189;147;249m│[0m [38;2;189;147;249mSupport:    [0m[38;2;255;184;108m$145.00[0m                                      [38;2;189;147;249m│[0m
[38;2;189;147;249m│[0m [38;2;189;147;249mResistance: [0m[38;2;255;184;108m$200.00[0m                                      [38;2;189;147;249m│[0m
[38;2;189;147;249m│[0m                                                          [38;2;189;147;249m│[0m
[38;2;189;147;249m├─ [0m[38;2;189;147;249mRISK FACTORS[0m[38;2;189;147;249m ───────────────────────────────────────────┤[0m
[38;2;189;147;249m│[0m [38;2;241;250;140m⚠ [0m[38;2;248;248;242mExport controls limiting China revenue[0m                 [38;2;189;147;249m│[0m
[38;2;189;147;249m│[0m [38;2;241;250;140m⚠ [0m[38;2;248;248;242mAMD gaining datacenter GPU market share[0m                [38;2;189;147;249m│[0m
[38;2;189;147;249m│[0m [38;2;241;250;140m⚠ [0m[38;2;248;248;242mValuation premium at 35x forward earnings[0m              [38;2;189;147;249m│[0m
[38;2;189;147;249m│[0m                                                          [38;2;189;147;249m│[0m
[38;2;189;147;249m╰──────────────────────────────────────────────────────────╯[0m"
`;

exports[`verdict > renders in solarized-dark theme 1`] = `
"[38;2;38;139;210m╭─ [0m[38;2;38;139;210mVERDICT[0m[38;2;38;139;210m ────────────────────────────────────────────────╮[0m
[38;2;38;139;210m│[0m                                                          [38;2;38;139;210m│[0m
[38;2;38;139;210m│[0m [38;2;238;232;213m[1mNVIDIA remains the dominant AI infrastructure play with[0m[0m  [38;2;38;139;210m│[0m
[38;2;38;139;210m│[0m [38;2;238;232;213m[1munmatched GPU supply chain leverage and software moat[0m[0m    [38;2;38;139;210m│[0m
[38;2;38;139;210m│[0m [38;2;238;232;213m[1mvia CUDA.[0m[0m                                                [38;2;38;139;210m│[0m
[38;2;38;139;210m│[0m                                                          [38;2;38;139;210m│[0m
[38;2;38;139;210m├─ [0m[38;2;38;139;210mSIGNAL[0m[38;2;38;139;210m ─────────────────────────────────────────────────┤[0m
[38;2;38;139;210m│[0m [38;2;38;139;210mRecommendation: [0m[38;2;133;153;0mBUY[0m                                      [38;2;38;139;210m│[0m
[38;2;38;139;210m│[0m                                                          [38;2;38;139;210m│[0m
[38;2;38;139;210m├─ [0m[38;2;38;139;210mKEY LEVELS[0m[38;2;38;139;210m ─────────────────────────────────────────────┤[0m
[38;2;38;139;210m│[0m [38;2;38;139;210mSupport:    [0m[38;2;203;75;22m$145.00[0m                                      [38;2;38;139;210m│[0m
[38;2;38;139;210m│[0m [38;2;38;139;210mResistance: [0m[38;2;203;75;22m$200.00[0m                                      [38;2;38;139;210m│[0m
[38;2;38;139;210m│[0m                                                          [38;2;38;139;210m│[0m
[38;2;38;139;210m├─ [0m[38;2;38;139;210mRISK FACTORS[0m[38;2;38;139;210m ───────────────────────────────────────────┤[0m
[38;2;38;139;210m│[0m [38;2;181;137;0m⚠ [0m[38;2;238;232;213mExport controls limiting China revenue[0m                 [38;2;38;139;210m│[0m
[38;2;38;139;210m│[0m [38;2;181;137;0m⚠ [0m[38;2;238;232;213mAMD gaining datacenter GPU market share[0m                [38;2;38;139;210m│[0m
[38;2;38;139;210m│[0m [38;2;181;137;0m⚠ [0m[38;2;238;232;213mValuation premium at 35x forward earnings[0m              [38;2;38;139;210m│[0m
[38;2;38;139;210m│[0m                                                          [38;2;38;139;210m│[0m
[38;2;38;139;210m╰──────────────────────────────────────────────────────────╯[0m"
`;

exports[`verdict > renders with HOLD signal 1`] = `
"[38;2;0;212;255m╭─ [0m[38;2;0;212;255mVERDICT[0m[38;2;0;212;255m ────────────────────────────────────────────────╮[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;255;255m[1mNVIDIA remains the dominant AI infrastructure play with[0m[0m  [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;255;255m[1munmatched GPU supply chain leverage and software moat[0m[0m    [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;255;255m[1mvia CUDA.[0m[0m                                                [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m├─ [0m[38;2;0;212;255mSIGNAL[0m[38;2;0;212;255m ─────────────────────────────────────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mRecommendation: [0m[38;2;255;170;0mHOLD[0m                                     [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m├─ [0m[38;2;0;212;255mKEY LEVELS[0m[38;2;0;212;255m ─────────────────────────────────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mSupport:    [0m[38;2;255;221;0m$145.00[0m                                      [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mResistance: [0m[38;2;255;221;0m$200.00[0m                                      [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m├─ [0m[38;2;0;212;255mRISK FACTORS[0m[38;2;0;212;255m ───────────────────────────────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;255;170;0m⚠ [0m[38;2;255;255;255mExport controls limiting China revenue[0m                 [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;170;0m⚠ [0m[38;2;255;255;255mAMD gaining datacenter GPU market share[0m                [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;170;0m⚠ [0m[38;2;255;255;255mValuation premium at 35x forward earnings[0m              [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m╰──────────────────────────────────────────────────────────╯[0m"
`;

exports[`verdict > renders with NEUTRAL signal 1`] = `
"[38;2;0;212;255m╭─ [0m[38;2;0;212;255mVERDICT[0m[38;2;0;212;255m ────────────────────────────────────────────────╮[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;255;255m[1mNVIDIA remains the dominant AI infrastructure play with[0m[0m  [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;255;255m[1munmatched GPU supply chain leverage and software moat[0m[0m    [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;255;255m[1mvia CUDA.[0m[0m                                                [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m├─ [0m[38;2;0;212;255mSIGNAL[0m[38;2;0;212;255m ─────────────────────────────────────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mRecommendation: [0m[38;2;255;170;0mNEUTRAL[0m                                  [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m├─ [0m[38;2;0;212;255mKEY LEVELS[0m[38;2;0;212;255m ─────────────────────────────────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mSupport:    [0m[38;2;255;221;0m$145.00[0m                                      [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mResistance: [0m[38;2;255;221;0m$200.00[0m                                      [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m├─ [0m[38;2;0;212;255mRISK FACTORS[0m[38;2;0;212;255m ───────────────────────────────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;255;170;0m⚠ [0m[38;2;255;255;255mExport controls limiting China revenue[0m                 [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;170;0m⚠ [0m[38;2;255;255;255mAMD gaining datacenter GPU market share[0m                [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;170;0m⚠ [0m[38;2;255;255;255mValuation premium at 35x forward earnings[0m              [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m╰──────────────────────────────────────────────────────────╯[0m"
`;

exports[`verdict > renders with SELL signal 1`] = `
"[38;2;0;212;255m╭─ [0m[38;2;0;212;255mVERDICT[0m[38;2;0;212;255m ────────────────────────────────────────────────╮[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;255;255m[1mNVIDIA remains the dominant AI infrastructure play with[0m[0m  [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;255;255m[1munmatched GPU supply chain leverage and software moat[0m[0m    [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;255;255m[1mvia CUDA.[0m[0m                                                [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m├─ [0m[38;2;0;212;255mSIGNAL[0m[38;2;0;212;255m ─────────────────────────────────────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mRecommendation: [0m[38;2;255;68;68mSELL[0m                                     [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m├─ [0m[38;2;0;212;255mKEY LEVELS[0m[38;2;0;212;255m ─────────────────────────────────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mSupport:    [0m[38;2;255;221;0m$145.00[0m                                      [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mResistance: [0m[38;2;255;221;0m$200.00[0m                                      [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m├─ [0m[38;2;0;212;255mRISK FACTORS[0m[38;2;0;212;255m ───────────────────────────────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;255;170;0m⚠ [0m[38;2;255;255;255mExport controls limiting China revenue[0m                 [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;170;0m⚠ [0m[38;2;255;255;255mAMD gaining datacenter GPU market share[0m                [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;170;0m⚠ [0m[38;2;255;255;255mValuation premium at 35x forward earnings[0m              [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m╰──────────────────────────────────────────────────────────╯[0m"
`;

exports[`verdict > renders with minimal opts 1`] = `
"[38;2;0;212;255m╭─ [0m[38;2;0;212;255mVERDICT[0m[38;2;0;212;255m ────────────────────────────────────────────────╮[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m╰──────────────────────────────────────────────────────────╯[0m"
`;

exports[`verdict > renders with no levels 1`] = `
"[38;2;0;212;255m╭─ [0m[38;2;0;212;255mVERDICT[0m[38;2;0;212;255m ────────────────────────────────────────────────╮[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;255;255m[1mNVIDIA remains the dominant AI infrastructure play with[0m[0m  [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;255;255m[1munmatched GPU supply chain leverage and software moat[0m[0m    [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;255;255m[1mvia CUDA.[0m[0m                                                [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m├─ [0m[38;2;0;212;255mSIGNAL[0m[38;2;0;212;255m ─────────────────────────────────────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mRecommendation: [0m[38;2;0;255;136mBUY[0m                                      [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m├─ [0m[38;2;0;212;255mRISK FACTORS[0m[38;2;0;212;255m ───────────────────────────────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;255;170;0m⚠ [0m[38;2;255;255;255mExport controls limiting China revenue[0m                 [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;170;0m⚠ [0m[38;2;255;255;255mAMD gaining datacenter GPU market share[0m                [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;170;0m⚠ [0m[38;2;255;255;255mValuation premium at 35x forward earnings[0m              [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m╰──────────────────────────────────────────────────────────╯[0m"
`;

exports[`verdict > renders with no risks 1`] = `
"[38;2;0;212;255m╭─ [0m[38;2;0;212;255mVERDICT[0m[38;2;0;212;255m ────────────────────────────────────────────────╮[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;255;255m[1mNVIDIA remains the dominant AI infrastructure play with[0m[0m  [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;255;255m[1munmatched GPU supply chain leverage and software moat[0m[0m    [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;255;255m[1mvia CUDA.[0m[0m                                                [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m├─ [0m[38;2;0;212;255mSIGNAL[0m[38;2;0;212;255m ─────────────────────────────────────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mRecommendation: [0m[38;2;0;255;136mBUY[0m                                      [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m├─ [0m[38;2;0;212;255mKEY LEVELS[0m[38;2;0;212;255m ─────────────────────────────────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mSupport:    [0m[38;2;255;221;0m$145.00[0m                                      [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mResistance: [0m[38;2;255;221;0m$200.00[0m                                      [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m╰──────────────────────────────────────────────────────────╯[0m"
`;

exports[`verdict > renders with only thesis 1`] = `
"[38;2;0;212;255m╭─ [0m[38;2;0;212;255mVERDICT[0m[38;2;0;212;255m ────────────────────────────────────────────────╮[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;255;255m[1mSimple thesis.[0m[0m                                           [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m╰──────────────────────────────────────────────────────────╯[0m"
`;

exports[`verdict > renders with wide width 1`] = `
"[38;2;0;212;255m╭─ [0m[38;2;0;212;255mVERDICT[0m[38;2;0;212;255m ────────────────────────────────────────────────────────────────────────────────────────╮[0m
[38;2;0;212;255m│[0m                                                                                                  [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;255;255m[1mNVIDIA remains the dominant AI infrastructure play with unmatched GPU supply chain leverage and[0m[0m  [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;255;255m[1msoftware moat via CUDA.[0m[0m                                                                          [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                                                                  [38;2;0;212;255m│[0m
[38;2;0;212;255m├─ [0m[38;2;0;212;255mSIGNAL[0m[38;2;0;212;255m ─────────────────────────────────────────────────────────────────────────────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mRecommendation: [0m[38;2;0;255;136mBUY[0m                                                                              [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                                                                  [38;2;0;212;255m│[0m
[38;2;0;212;255m├─ [0m[38;2;0;212;255mKEY LEVELS[0m[38;2;0;212;255m ─────────────────────────────────────────────────────────────────────────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mSupport:    [0m[38;2;255;221;0m$145.00[0m                                                                              [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mResistance: [0m[38;2;255;221;0m$200.00[0m                                                                              [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                                                                  [38;2;0;212;255m│[0m
[38;2;0;212;255m├─ [0m[38;2;0;212;255mRISK FACTORS[0m[38;2;0;212;255m ───────────────────────────────────────────────────────────────────────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;255;170;0m⚠ [0m[38;2;255;255;255mExport controls limiting China revenue[0m                                                         [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;170;0m⚠ [0m[38;2;255;255;255mAMD gaining datacenter GPU market share[0m                                                        [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;255;170;0m⚠ [0m[38;2;255;255;255mValuation premium at 35x forward earnings[0m                                                      [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m                                                                                                  [38;2;0;212;255m│[0m
[38;2;0;212;255m╰──────────────────────────────────────────────────────────────────────────────────────────────────╯[0m"
`;
